<resources>
    <string name="app_name">Court counter</string>
    <string name="teamA">Team A</string>
    <string name="value1">0</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="freeThrow">Free Throw</string>

    <string name="teamB">Team B</string>
    <string name="value2">0</string>
    <string name="points_3">+3 Points</string>
    <string name="points_2">+2 Points</string>
    <string name="free_Throw">Free Throw</string>

    <string name="reset">reset</string>
</resources>
